# ivpn

./: Backend.cpp  Backend.h  CMakeLists.txt  constant.h  main.cpp
core/: NodeModel.cpp  NodeModel.h  NodeParser.cpp  NodeParser.h  QRCodeGen.cpp  QRCodeGen.h  QRProvider.cpp  QRProvider.h  http_utils.cpp  http_utils.h  node.cpp  node.h
qml/: Main.qml
